--- a/ForestCaveAdventure/ForestCaveAdventure.csproj
+++ b/ForestCaveAdventure/ForestCaveAdventure.csproj
@@ -51,8 +51,21 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Core\Actor.cs" />
+    <Compile Include="Core\Colours.cs" />
+    <Compile Include="Core\Direction.cs" />
+    <Compile Include="Core\DungeonMap.cs" />
+    <Compile Include="Core\Monster.cs" />
+    <Compile Include="Core\Palette.cs" />
+    <Compile Include="Core\Player.cs" />
     <Compile Include="Game.cs" />
+    <Compile Include="Interfaces\IActor.cs" />
+    <Compile Include="Interfaces\IDrawable.cs" />
+    <Compile Include="Monsters\Kobold.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="System\CommandSystem.cs" />
+    <Compile Include="System\MapGenerator.cs" />
+    <Compile Include="System\MessageLog.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
